deployments/consul/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ui
spec:
  rules:
    - http:
        paths:
          - path: /consul
            pathType: Prefix
            backend:
              service:
                name: consul-ui
                port:
                  number: 8501
